[package]
name = "iter_columns"
version = "0.1.0"
edition = "2018"
authors = ["Linus789"]
description = "Iterate over columns easily"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Linus789/iter_columns"
categories = ["algorithms", "rust-patterns"]

[dependencies]
iter_columns_derive = "0.1.0"
