[package]
name = "iter_columns"
version = "0.3.0"
edition = "2018"
authors = ["Linus789"]
description = "Iterate over columns easily"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Linus789/iter_columns"
categories = ["algorithms", "rust-patterns"]

[features]
array_into_iter = []